--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
               <label for="name" class="form-lable">Имя</label>
               <input type="text" class="form-input" name="name" id="name" />
               <svg class="name-svg" width="18" height="18">
-                <use href="../images/svg/sprite.svg#icon-name"></use>
+                <use href="./images/svg/sprite.svg#icon-name"></use>
               </svg>
             </div>
             <div class="form-field">
