--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
               <label for="tel" class="form-lable">Телефон</label>
               <input type="tel" class="form-input" name="tel" id="tel" />
               <svg class="name-svg" width="18" height="18">
-                <use href="../images/svg/sprite.svg#icon-form-telephone"></use>
+                <use href="./images/svg/sprite.svg#icon-form-telephone"></use>
               </svg>
             </div>
             <div class="form-field">
