Домашка на проверку

--- a/portfolio.html
+++ b/portfolio.html
@@ -353,8 +353,20 @@
           </ul>
         </div>
         <div class="footer-box">
-          <b class="caption-b">Подпишитесь на рассылку</b>
-          <button type="button" class="button">Подписаться</button>
+          <div class="textarea-box">
+            <b class="caption-b">Подпишитесь на рассылку</b>
+            <textarea
+              class="textarea-footer"
+              name="textarea-footer"
+              id="textarea-footer"
+              rows="1"
+              placeholder="E-mail"
+            ></textarea>
+          </div>
+          <button type="button" class="button footer-btn">
+            <span class="subscribe">Подписаться</span
+            ><img src="./images/svg/airplane.svg" alt="" />
+          </button>
         </div>
       </div>
     </footer>
