--- a/index.html
+++ b/index.html
@@ -390,21 +390,30 @@
             <h2>Оставьте свои данные,мы вам перезвоним</h2>
             <div class="form-field">
               <label for="name" class="form-lable">Имя</label>
-              <input type="text" class="form-input" name="name" id="name" />
-              <svg class="name-svg" width="18" height="18">
-                <use href="./images/svg/sprite.svg#icon-name"></use>
+              <input
+                type="text"
+                class="form-input"
+                name="name"
+                id="name"
+                placeholder=" "
+              />
+              <svg class="name-svg">
+                <use href="./images/svg/symbol-defs.svg#icon-name"></use>
               </svg>
             </div>
             <div class="form-field">
               <label for="tel" class="form-lable">Телефон</label>
               <input type="tel" class="form-input" name="tel" id="tel" />
-              <svg class="name-svg" width="18" height="18">
-                <use href="./images/svg/sprite.svg#icon-form-telephone"></use>
+              <svg class="name-svg">
+                <use href="./images/svg/symbol-defs.svg#icon-phone-form"></use>
               </svg>
             </div>
             <div class="form-field">
               <label for="mail" class="form-lable">Почта</label>
               <input type="email" class="form-input" name="mail" id="mail" />
+              <svg class="name-svg">
+                <use href="./images/svg/symbol-defs.svg#icon-email-form"></use>
+              </svg>
             </div>
             <div class="comment-box">
               <label class="comment-lable" for="comment">Коментарий</label>
@@ -415,21 +424,19 @@
                 placeholder="Введите текст"
               ></textarea>
             </div>
-            <div role="group" class="group">
-              <input
-                type="checkbox"
-                name="contract"
-                value="contract"
-                id="contract"
-              />
+            <div class="group">
               <label for="contract"
-                >Соглашаюсь с рассылкой и принимаю
-                <a class="agreement-conditions" href=""
-                  >Условия договора</a
-                ></label
-              >
+                ><input
+                  class="checkbox"
+                  type="checkbox"
+                  name="contract"
+                  value="contract"
+                  id="contract"
+                />
+                <span class="icon-check"></span> </label
+              >Соглашаюсь с рассылкой и принимаю
+              <a class="agreement-conditions" href="">Условия договора</a>
             </div>
-
             <button class="button">Отправить</button>
           </form>
           <button class="button-close" data-modal-close>
@@ -508,7 +515,10 @@
               placeholder="E-mail"
             ></textarea>
           </div>
-          <button type="button" class="button">Подписаться</button>
+          <button type="button" class="button footer-btn">
+            <span class="subscribe">Подписаться</span
+            ><img src="./images/svg/airplane.svg" alt="" />
+          </button>
         </div>
       </div>
     </footer>
